Add one single API call for configuring microvm
